--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  background-color: rgb(12, 12, 12);
+  height: 800px;
+  width: 100%;
+  margin-top: 0px;
+  overflow: hidden;
+}
+
+.emdiv{
+  margin-left: 350px;
+  
+}
+
+.myform{
+  text-align: center;
+  margin-top: 60px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(34, 32, 32);
+  width: 800px;
+  height: 650px;
+  padding-top: 20px;
+  font-size: 20px;
+  border-radius: 10px;
+  box-shadow: rgba(125, 26, 46, 0.56) 0px 20px 70px 5px;
+}
+
+.inpt{
+  border-style: none;
+  border-radius: 20px;
+  background-color:whitesmoke;
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 22px;
+}
+
+.inpt1{
+  height: 50px;
+  width: 300px;
+  text-align: center;
+}
+
+.inptt{
+  width: 500px;
+  padding-top: 10px;
+  padding-left: 15px;
+  letter-spacing: 1.5px;
+  font-size: 15px;
+}
+
+button{
+  height: 50px;
+  width: 150px;
+  border-style: none;
+  border-radius: 20px;
+  font-size: 15px;
+}
+
+.inpt:hover{
+  background-color: rgb(186, 172, 172);
+}
+
+button:hover{
+  background-color: plum;
+  transform: scale(1.1);
+}
+
+.myform:hover{
+  box-shadow: rgba(31, 87, 56, 0.56) 0px 50px 100px 20px;
 }
